--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "v4",
-  "description": "Personal Website V4",
+  "name": "v2",
+  "description": "Personal Website",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "author": "Vishwa G",
+  "homepage": "https://vishgoki.github.io/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/vishgoki/vishgoki.github.io"
   },
   "keywords": [
     "gatsby"
@@ -20,7 +21,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "deployy": "gatsby build && gh-pages -d public -b main"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
